# trtrtrtrtr

./: .gitignore  4.40.0  Dockerfile  chart_smoke_test.py  credentialstest.py  docker-compose.yml  minimal_connectivity_test.py  pyproject.toml  requirements.txt  test_ib_stream.py  test_lob_stream.py
config/: config.yaml  credentials.env
src/: brain.py  main.py
src/agents/: macro_agent.py  sentiment_agent.py  stat_arb_agent.py  technical_agent.py
src/autonomous_ai_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backtest/: engine.py  replay_backtest.py
src/compliance/: audit_trail.py
src/data_ingestion/: candle_builder.py  ib_stream.py  lob_stream.py
src/data_pipeline/: alt_data_feed.py  label_collector.py  synthetic.py
src/encoders/: multimodal.py  ts_encoder.py  vit_encoder.py
src/execution/: broker.py  fill_model.py  impact_model.py  micro_price.py  prime_connector.py  risk.py  smart_router.py
src/labeling/: future_return_labeler.py
src/performance/: drift_guard.py  pnl_tracker.py
src/registry/: model_registry.py
src/risk/: hedge_engine.py  portfolio_risk.py  reg_t_guard.py
src/rl/: live_fine_tune.py  ppo_trainer.py  replay_buffer.py
src/services/: supervisor.py
src/serving/: serve_vit.py
src/training/: train_vit.py
src/utils/: adversarial.py  config.py  latency.py  logger.py  market_hours.py
tests/: test_vit.py
